--- a/Airbnb_EDA_Project_Submission_.ipynb
+++ b/Airbnb_EDA_Project_Submission_.ipynb
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "4CkvbW_SlZ_R"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,7 +332,7 @@
         },
         "outputId": "d5ead1c7-3f31-4b1f-c5c7-259bd337ab45"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,7 +366,7 @@
         },
         "outputId": "f7659446-e7ac-454e-f7c6-985f7cf289c1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +781,7 @@
         },
         "outputId": "72c43ce7-8a9f-4281-842c-54ca970ce569"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
         },
         "outputId": "61bf28cc-efcf-4067-e8cf-4e36fcad4853"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +872,7 @@
         },
         "outputId": "1d0bf4b1-3a46-40ea-9670-ae25fc9c189b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +908,7 @@
         },
         "outputId": "fd0fbb7e-263b-44bf-84e4-0bbc576ede9e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +953,7 @@
         },
         "outputId": "5951c5f6-ebdf-4a53-a145-b1fa457aea7c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1012,7 +1012,7 @@
         },
         "outputId": "a4b5db30-77a6-4565-bb35-6e89cd5a4df7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1045,7 +1045,7 @@
         },
         "outputId": "cb5e2824-dfe5-463f-f989-2e0d1f8a9255"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1520,7 +1520,7 @@
         },
         "outputId": "d62df0b9-632e-40e2-8c88-4e305c63ca67"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1582,7 +1582,7 @@
         },
         "outputId": "afc57024-2c7a-4b35-a2aa-14358ef9c1ee"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1623,7 @@
         },
         "outputId": "60c575fa-61d4-48fb-b17c-40bfd79feee7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
         "id": "uGVNwjksLAo5",
         "outputId": "b200f60b-c1b7-45b6-d96a-ea989ae19bb9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1904,7 +1904,7 @@
         },
         "outputId": "73204239-defb-4679-9d66-bb47463cd0a2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2038,7 @@
         },
         "outputId": "2cb54c49-943d-43c9-a2bf-f6a07e041176"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2083,7 +2083,7 @@
         "id": "TFCSIL1SqBva",
         "outputId": "0adba887-af96-4ef5-ed80-426758f06e4c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2110,7 +2110,7 @@
         },
         "outputId": "2e3a49d3-b662-4c22-b45b-01cb4132031f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2147,7 +2147,7 @@
         },
         "outputId": "016f4883-599c-4a86-efa1-4b4e4d93bcfa"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,7 +2257,7 @@
         },
         "outputId": "f39b8714-aa58-474d-cb5d-643d8e643e0d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2351,7 +2351,7 @@
         },
         "outputId": "fc7d7272-c216-4c5d-dbda-1c386bcf3459"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2459,7 +2459,7 @@
         },
         "outputId": "a6337d54-fe0b-47c2-ae5d-a9fb94b51fbd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2486,7 +2486,7 @@
         },
         "outputId": "a5a1d55a-abb7-44db-fdbd-60b22db55cbf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2829,7 +2829,7 @@
         },
         "outputId": "2010cdc8-0403-49b0-d7b5-31fe397d2653"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2872,7 +2872,7 @@
         },
         "outputId": "f773191d-05ac-4308-b04b-0257ab78dd8c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2922,7 +2922,7 @@
         },
         "outputId": "b152fb10-c11b-4531-b535-cdd731f0e880"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2973,7 +2973,7 @@
         },
         "outputId": "44e9534b-48c2-4c90-9b82-4b26ffd24068"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3012,7 +3012,7 @@
         },
         "outputId": "a9a3a966-6b63-418b-b7c3-9cd377b9d2a6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3050,7 +3050,7 @@
         },
         "outputId": "907b42fb-f06c-4351-d576-77e777a39b3b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3077,7 +3077,7 @@
         },
         "outputId": "a683a78b-15bc-4d4a-cca6-774c6b8312b2"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3104,7 +3104,7 @@
         },
         "outputId": "7636a5f6-d8a5-4060-98dc-8dc73e617ac6"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3150,7 +3150,7 @@
         },
         "outputId": "9c6351ed-c338-45ad-f5a8-f7cb1d34dd44"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3229,7 +3229,7 @@
         },
         "outputId": "51e0274a-e1a9-4e73-8db1-091a20bab5b8"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3347,7 +3347,7 @@
         },
         "outputId": "c4647706-0f4c-4ba0-ab6b-2065ccc12e6e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3407,7 +3407,7 @@
         },
         "outputId": "a5fe2666-6762-40d3-f50f-68dd8c0c2dcb"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3450,7 +3450,7 @@
         },
         "outputId": "aa462764-4599-457e-bfcd-c0be9860c753"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3487,7 +3487,7 @@
         },
         "outputId": "06b36ab7-e20c-4ac0-8051-2231b5078a33"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3521,7 +3521,7 @@
         },
         "outputId": "a8e1123d-ead4-48f9-af90-f6e8e6509ec6"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3560,7 +3560,55 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "####  Data Manipulations Done:\n",
+        "\n",
+        "1. **Data Cleaning:**\n",
+        "\n",
+        "   * Converted `last_review` to datetime.\n",
+        "   * Dropped or skipped rows with null `last_review`.\n",
+        "   * Filtered out listings with `availability_365 = 0`.\n",
+        "\n",
+        "2. **Feature Engineering:**\n",
+        "\n",
+        "   * Created a new column:\n",
+        "     `revenue = price × availability_365`\n",
+        "\n",
+        "3. **Grouped Aggregations:**\n",
+        "\n",
+        "   * Aggregated average revenue by `neighbourhood_group` and `room_type`.\n",
+        "   * Counted top repeated listing titles.\n",
+        "   * Grouped by host or property for identifying duplicates.\n",
+        "\n",
+        "### Key Insights Found:\n",
+        "\n",
+        "1. **Popular Room Types:**\n",
+        "\n",
+        "   * `Entire home/apt` is the most common and preferred room type.\n",
+        "\n",
+        "2. **Revenue Trends:**\n",
+        "\n",
+        "   * Manhattan and Brooklyn generate the highest average revenue.\n",
+        "   * Entire homes generate more revenue compared to shared/private rooms.\n",
+        "\n",
+        "3. **Listing Patterns:**\n",
+        "\n",
+        "   * Some hosts list multiple properties under similar names.\n",
+        "   * Frequently reviewed listings tend to be more available.\n",
+        "\n",
+        "4. **Correlation Findings:**\n",
+        "\n",
+        "   * `Price` and `availability_365` show weak correlation.\n",
+        "   * `number_of_reviews` has slight correlation with `reviews_per_month`.\n",
+        "\n",
+        "5. **Location Density:**\n",
+        "\n",
+        "   * High listing density observed in Manhattan using KDE heatmaps.\n",
+        "\n",
+        "6. **Minimum Night Analysis:**\n",
+        "\n",
+        "   * Many listings have a low minimum night requirement, encouraging short stays.\n",
+        "\n",
+        "   "
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
@@ -3621,7 +3669,7 @@
         },
         "outputId": "a8fc31a4-dadc-48a3-d2a5-c837985f736e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3781,7 +3829,7 @@
         },
         "outputId": "c65f1363-4efb-40e3-b269-edbde25126d7"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3949,7 +3997,7 @@
         },
         "outputId": "0f9a3fb7-3f46-4613-ee61-3a65fb523945"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4089,7 +4137,7 @@
         },
         "outputId": "e565b1a0-75e0-43a8-9a04-6b5bf9448267"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4218,7 +4266,7 @@
         },
         "outputId": "6ee89e3f-094e-4e7e-b277-3686701db8d7"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4338,7 +4386,7 @@
         },
         "outputId": "6d088e55-d47b-4398-a0f0-c43e1c0ce4f9"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4468,7 +4516,7 @@
         "id": "3djCuhovnjbp",
         "outputId": "b52d2cdb-cd10-441e-f14b-7b37a6831721"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4615,7 +4663,7 @@
         },
         "outputId": "2cc1e8e6-7053-48ce-b80a-5f4ef1f340a8"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4724,7 +4772,7 @@
         },
         "outputId": "6eff89be-ad4f-40c8-a6b9-f7dcd3247625"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4830,7 +4878,7 @@
         },
         "outputId": "1d0b815d-8403-46ea-f63c-ec6a012b4055"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4937,7 +4985,7 @@
         },
         "outputId": "b6bfebbf-88f6-4562-dbcd-b2b6421b4acc"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5066,7 +5114,7 @@
         },
         "outputId": "6cdbab70-e64a-4bbb-b1bd-076dae17cb30"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5186,7 +5234,7 @@
         },
         "outputId": "07c439ee-abc9-4f61-c4f4-bba0ed0dc75d"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5294,7 +5342,7 @@
         },
         "outputId": "cf51c422-7fd9-4b22-9c9e-bb937f3396ec"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5371,7 +5419,7 @@
         "id": "Y6gIL_uVPsNo",
         "outputId": "85dda71d-45d3-42ba-999b-2b30f912901e"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
